# chunkwise_local

./: .gitignore  README.md  embeddings_schema.sql  schema.sql  vector_schema.sql
.devcontainer/: Dockerfile  devcontainer.json
backend/: package-lock.json  package.json
backend/src/: app.ts  server.ts
backend/src/routes/: routes.ts
cdk/: README.md  app.py  cdk.context.json  config.py
cdk/stacks/: __init__.py  batch_stack.py  database_stack.py  ecs_stack.py  load_balancer_stack.py  network_stack.py
cdk/tests/unit/: test_cdk_stack.py
chunking/: Dockerfile  README.md  get_chunks_with_metadata.py  helpers.py  main.py  pyproject.toml  requirements.txt  sample_request_body.txt  sample_requests.txt
chunking/utils/: __init__.py  create_chunker.py  get_chunks.py
cli/: README.md  chunkwise_monospace.txt  cli.py  logo.txt  pyproject.toml
client/: README.md  config.js  index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  index.css  styles.css  types.ts
client/src/assets/: about_git_sample_text.txt
client/src/components/: ChooseDocument.tsx  ChooseFile.tsx  ChunkStatistics.tsx  ChunkStats.tsx  ChunkerForm.tsx  ConfigSlider.tsx  DeployConnector.tsx  EvaluationMetrics.tsx  Evaluations.tsx  Header.tsx  RDSConnectionDetails.tsx  S3CredentialsForm.tsx  TabView.tsx  VisualizationDisplay.tsx  WorkflowComparison.tsx  WorkflowDetails.tsx  WorkflowList.tsx
client/src/dataset/: rumpelstiltskin.ts  six_soldiers_of_fortune.ts
client/src/hooks/: useLocalStorage.tsx  useThrottle.tsx
client/src/reducers/: comparisonReducer.ts  workflowReducer.ts
client/src/services/: chunkers.ts  configs.ts  deploy.ts  documents.ts  evaluation.ts  gateway.ts  visualization.ts  workflows.ts
client/src/types/: types.ts
client/src/utils/: createRequestBody.ts
core/: README.md  pyproject.toml
core/chunkwise_core/: __init__.py
core/chunkwise_core/configs/: __init__.py  adjustable_configs.py
core/chunkwise_core/types/: __init__.py  chunk.py  chunker_config.py  evaluation.py
core/chunkwise_core/utils/: __init__.py  create_chunker.py
evaluation/: Dockerfile  README.md  helpers.py  main.py  pyproject.toml  requirements.txt  s3_utils.py  sample_requests.txt
evaluation/data/: llm_queries_sample_document_large.csv  llm_queries_sample_document_medium.csv  llm_queries_temp_doc_eabbf35a.csv  sample_document_large.txt  sample_document_large_normalized.txt  sample_document_medium.txt  sample_document_medium_normalized.txt  sample_document_small.txt  sample_queries_large.csv  sample_queries_large_raw.csv  sample_queries_references.csv  sample_queries_small.csv  temp_doc_eabbf35a_normalized.txt  test_document.txt
evaluation/services/: __init__.py  evaluation.py  queries.py  s3_utils.py
evaluation/utils/: __init__.py  generate_sample_queries.py  normalize_document.py
processing/: Dockerfile  README.md  config.py  process_document.py  pyproject.toml  requirements.txt  services.py  utils.py
processing/data/: benchmark.md  proust2.txt  proust3.txt
server/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  sample_request_body.txt  sample_requests.txt
server/config/: __init__.py  config.py
server/documents/: Sample 1.txt  Sample 2.txt  example
server/server_types/: __init__.py  endpoints.py
server/services/: __init__.py  chunkwise_services.py  db_services.py  deploy_db_services.py  deploy_rds_services.py  deploy_secrets_services.py  local_services.py  s3_services.py
server/utils/: __init__.py  adjustable_configs.py  calculate_chunk_stats.py  create_file.py  delete_file.py  deploy_helpers.py  exception_helpers.py  extract_metrics.py  get_chunks_with_metadata.py  normalize_document.py  visualization.py
visualization/: .gitignore  README.md  main.py  models.py  pyproject.toml  sample_request_body.txt  visualization.html  viz.py
visualization/example_visualizations/: body_visualization.html  full_page_visualization.html
visualization/utils/: __init__.py  save_to_file.py  visualization.py  viz.py
