[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
chunkwise-core = {develop = true}
[project]
name = "chunking"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi (>=0.120.2,<0.121.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "chonkie (>=1.4.0,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pydantic (>=2.12.3,<3.0.0)",
    "langchain-text-splitters (>=1.0.0,<2.0.0)",
    "tiktoken (>=0.12.0,<0.13.0)",
    "fuzzywuzzy (>=0.18.0,<0.19.0)",
    "pylint (>=4.0.2,<5.0.0)",
    "chunkwise-core @ file:///Users/tylermcgraw/code/capstone/Chunkwise/chunkwise_local/core"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
