[tool.poetry]
name = "chunkwise-core"
version = "0.1.0"
description = "Shared types, constants, and helpers for Chunkwise services"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "chunkwise_core"}]

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
pydantic = ">=2.12.3,<3.0.0"
python-dotenv = "^1.2.1"
chonkie = {extras = ["openai"], version = "^1.4.1", optional=true}
langchain-text-splitters = {version = ">=1.0.0,<2.0.0", optional=true}

[tool.poetry.extras]
chunkers=["langchain-text-splitters", "chonkie"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
