[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
chunkwise-core = {develop = true}
[project]
name = "evaluation"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0.0"
dependencies = [
    "python-dotenv (>=1.2.1,<2.0.0)",
    "fastapi (>=0.120.3,<0.121.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "chunking-evaluation @ git+https://github.com/Chunkwise/chunking_evaluation_refactored.git",
    "chunkwise-core @ ../core",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

