[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13,<4.0.0"
python-dotenv = ">=1.0.0,<2.0.0"
fastapi = ">=0.120.4,<0.121.0"
uvicorn = ">=0.38.0,<0.39.0"
requests = ">=2.32.5,<3.0.0"
chunkwise-core = { git = "https://github.com/Chunkwise/chunkwise_core.git"}
boto3 = ">=1.40.68,<2.0.0"
psycopg2 = "^2.9.11"
fuzzywuzzy = "^0.18.0"
python-levenshtein = "^0.27.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"