[project]
name = "visualization"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.120.3,<0.121.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "chunkwise-core @ file:///Users/tylermcgraw/code/capstone/Chunkwise/chunkwise_local/core",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
