[tool.poetry]
name = "visualization"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
fastapi = ">=0.120.3,<0.121.0"
uvicorn = ">=0.38.0,<0.39.0"
chunkwise-core = {path = "../core", develop = true}
python-dotenv = "^1.2.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

